--- a/src/app/shiki-garden/shiki-garden-script.component.scss
+++ b/src/app/shiki-garden/shiki-garden-script.component.scss
@@ -1,6 +1,6 @@
 @import './../../assets/scss/variables';
 @import './../../assets/scss/mixin';
 
-#about-us {
+#shiki-garden-script {
   margin: 15px;
 }
