--- a/src/app/ingredient/ingredient-content.component.scss
+++ b/src/app/ingredient/ingredient-content.component.scss
@@ -4,3 +4,10 @@
 #ingredient {
   margin: 15px;
 }
+
+.recipe-table > tr > td {
+  padding: 5px 10px;
+  width: 140px;
+  border: 1px solid black;
+  border-collapse: collapse;
+}
