--- a/src/app/template/header/template-header.component.scss
+++ b/src/app/template/header/template-header.component.scss
@@ -33,7 +33,7 @@
     transition-duration: 0.15s;
 
     &:hover {
-      background: #F3D2CA;
+      background: #f3d2ca;
       cursor: pointer;
     }
 
