--- a/src/app/home/home-content.component.html
+++ b/src/app/home/home-content.component.html
@@ -3,7 +3,11 @@
 
   <div class="content">
     <div class="content-header">小兔的部屋</div>
-    <div class="content-body">本兔致力宣揚愛護兔子, 防止虐待及珍惜食材的訊息, 同時亦積極為兔子爭取應有的生存權利、尊重與關注, 以防止牠們受到切片或燒烤等虐待, 努力建立人類與兔子共融的社會。</div>
+    <div class="content-body">
+      <div>本兔致力宣揚愛護兔子，防止虐待及珍惜食材的訊息，</div>
+      <div>同時積極為兔子爭取應有的生存權利、尊重與關注，以防止牠們受到切片或燒烤等虐待，</div>
+      <div>努力建立人類與兔子共融的社會。</div>
+    </div>
   </div>
 
   <div class="content">
@@ -17,10 +21,10 @@
   <div class="content">
     <div class="content-header">飼養小兔說明書</div>
     <div class="content-body">
-      <div>1. 本房間禁止生火加熱, 本房間禁止生火加熱</div>
-      <div>2. 請勿抓緊兔耳或尾巴, 兔耳有很多的微絲血管, 是非常敏感的地方</div>
-      <div>3. 每星期梳理兔毛三至四次, 保持柔軟順滑毛質, 換毛季節可按需要增加次數</div>
-      <div>4. 歡迎餵食胡蘿蔔, 高麗菜等健康食品(每天最好有3種蔬菜以提供不同的營養)</div>
+      <div>1. 本房間禁止生火加熱，本房間禁止生火加熱</div>
+      <div>2. 請勿抓緊兔耳或尾巴，兔耳有很多的微絲血管，是非常敏感的地方</div>
+      <div>3. 每星期梳理兔毛三至四次，保持柔軟順滑毛質，換毛季節可按需要增加次數</div>
+      <div>4. 歡迎餵食胡蘿蔔，高麗菜等健康食品(每天最好有3種蔬菜以提供不同的營養)</div>
     </div>
   </div>
 </div>
