--- a/src/app/ingredient/ingredient-content.component.html
+++ b/src/app/ingredient/ingredient-content.component.html
@@ -2,10 +2,10 @@
   <div class="content">
     <div class="content-header">紅燒兔肉</div>
     <div class="content-body">
-      <div>紅燒兔肉是一道著名的漢族美食, 屬於川菜或客家菜。</div>
-      <div>其色澤醬紅, 味香肉爛, 鹹甜酸辣, 鮮香味濃, 富含營養素, 肥而不膩, 瘦而不硬。</div>
-      <div>兔肉是高蛋白、低脂肪、低膽固醇食品, 其性涼味甘, 在國際市場上享有盛名。</div>
-      <div>兔肉的蛋白質含量超過豬肉、牛肉、羊肉及大蝦, 脂肪也遠遠低於這些肉類。</div>
+      <div>紅燒兔肉是一道著名的漢族美食，屬於川菜或客家菜。</div>
+      <div>其色澤醬紅，味香肉爛，鹹甜酸辣，鮮香味濃，富含營養素，肥而不膩，瘦而不硬。</div>
+      <div>兔肉是高蛋白、低脂肪、低膽固醇食品，其性涼味甘，在國際市場上享有盛名。</div>
+      <div>兔肉的蛋白質含量超過豬肉、牛肉、羊肉及大蝦，脂肪也遠遠低於這些肉類。</div>
     </div>
   </div>
 
