--- a/src/app/shiki-garden/shiki-garden-map.component.scss
+++ b/src/app/shiki-garden/shiki-garden-map.component.scss
@@ -2,13 +2,12 @@
 @import './../../assets/scss/mixin';
 
 #shiki-garden-map {
-  margin: 15px;
+  margin: 15px 20px;
 }
 
 .map-container {
   height: 560px;
   width: 760px;
-  margin-left: 15px;
   position: relative;
 }
 
