--- a/src/app/shiki-garden/shiki-garden-script.component.html
+++ b/src/app/shiki-garden/shiki-garden-script.component.html
@@ -100,7 +100,7 @@
 
   <div class="content">
     <div class="content-body">
-      <div>下面為討伐金階黑煙的範本, 可按需要更改程序設定</div>
+      <div>下面為討伐金階黑煙的範本, 可按需要更改程序設定。</div>
     </div>
   </div>
 
