--- a/src/app/shiki-garden/shiki-garden-character.component.html
+++ b/src/app/shiki-garden/shiki-garden-character.component.html
@@ -3,8 +3,8 @@
 
   <div class="content">
     <div class="content-body">
-      <div>這裡是式姬們的表情包合集</div>
-      <div>在圖片上右鍵點撃"圖片另存新檔"可以儲存至本地電腦</div>
+      <div>這裡是式姬們的表情包合集，</div>
+      <div>在圖片上右鍵點撃"圖片另存新檔"可以儲存至本地電腦。</div>
     </div>
 
     <div class="content-body">最後更新日期: 3 October, 2021</div>
