--- a/src/app/shiki-garden/shiki-garden-map.component.html
+++ b/src/app/shiki-garden/shiki-garden-map.component.html
@@ -1,8 +1,8 @@
 <div id="shiki-garden-map">
   <div class="content">
     <div class="content-body">
-      <div>為了避免腳本過於繁重, 設定裏並沒列上所有討伐地的座標。</div>
-      <div>如果想指定討伐地, 請於討伐地設定(第7-32行)內貼上:</div>
+      <div>為了避免腳本過於繁重，設定裏並沒列上所有討伐地的座標。</div>
+      <div>如果想指定討伐地，請於討伐地設定(第7-32行)內貼上:</div>
     </div>
 
     <div class="content-body">
