--- a/src/app/about-us/about-us-content.component.html
+++ b/src/app/about-us/about-us-content.component.html
@@ -48,8 +48,8 @@
     <div class="content-header">成就</div>
     <div class="content-body">
       <div>1. 兔子大福同盟盟主，於百鬼夜行戰役中獲勝</div>
-      <div>2. 焦熱地獄攻略層數243層
-      <div>3. 白兔累計所持數量超過30,000隻
+      <div>2. 焦熱地獄攻略層數243層</div>
+      <div>3. 白兔累計所持數量超過30,000隻</div>
     </div>
   </div>
 </div>
