add firebase hosting

--- a/src/app/template/footer/template-footer.component.html
+++ b/src/app/template/footer/template-footer.component.html
@@ -1,5 +1,5 @@
 <div id="footer">
   <div class="footer-text">
-    <div>Copyright © 2021 Rabitto Wong. All rights reserved.</div>
+    <div>Copyright © 2016-2021 Rabitto Wong. All rights reserved.</div>
   </div>
 </div>
